--- a/package.json
+++ b/package.json
@@ -9,12 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.3",
+    "@toast-ui/editor-plugin-color-syntax": "^3.0.3",
+    "@toast-ui/react-editor": "^3.1.8",
+    "moment": "^2.29.4",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.4",
     "next": "12.2.2",
+    "next-auth": "^4.10.0",
+    "nextjs-progressbar": "^0.0.14",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-click-to-edit": "^1.2.3",
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.0.6",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "daisyui": "^2.19.0",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2"
+    "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
